stateDiagram-v2
  direction TB
  state "in-progress" as in_progress
  [*] --> todo
  [*] --> blocked
  blocked --> todo: dependency done
  todo --> in_progress: implement starts
  in_progress --> implemented: tests green
  implemented --> review: gates found issues
  implemented --> done: all gates pass, ships inline
  review --> done: findings resolved, ships inline
  done --> [*]

  %% Roles only. classDef colours are injected per theme by
  %% scripts/prerender-mermaid.ts (the diagram presentation seam).
  class todo,blocked plan
  class in_progress build
  class implemented,review,done verify
